Fixed alignment of list edit button with todo edit button.

--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -170,6 +170,7 @@ li.todo-line > span.edit-mode {
 }
 
 #add-list {
+  margin-right: 0.275em;
 }
 
 #list-edit-container {
